Lib/include/zenoh_commons.h


typedef enum z_priority_t {
  Z_PRIORITY_REAL_TIME = 1,
  Z_PRIORITY_INTERACTIVE_HIGH = 2,
  Z_PRIORITY_INTERACTIVE_LOW = 3,
  Z_PRIORITY_DATA_HIGH = 4,
  Z_PRIORITY_DATA = 5,
  Z_PRIORITY_DATA_LOW = 6,
  Z_PRIORITY_BACKGROUND = 7,
} z_priority_t;
typedef enum z_query_target_t {
  Z_QUERY_TARGET_BEST_MATCHING,
  Z_QUERY_TARGET_ALL,
  Z_QUERY_TARGET_ALL_COMPLETE,
} z_query_target_t;
typedef enum z_reliability_t {
  Z_RELIABILITY_BEST_EFFORT,
  Z_RELIABILITY_RELIABLE,
} z_reliability_t;
typedef enum zc_locality_t {
  ZC_LOCALITY_ANY = 0,
  ZC_LOCALITY_SESSION_LOCAL = 1,
  ZC_LOCALITY_REMOTE = 2,
} zc_locality_t;
typedef enum zc_log_severity_t {
  ZC_LOG_SEVERITY_TRACE = 0,
  ZC_LOG_SEVERITY_DEBUG = 1,
  ZC_LOG_SEVERITY_INFO = 2,
  ZC_LOG_SEVERITY_WARN = 3,
  ZC_LOG_SEVERITY_ERROR = 4,
} zc_log_severity_t;
typedef enum zc_reply_keyexpr_t {
  ZC_REPLY_KEYEXPR_ANY = 0,
  ZC_REPLY_KEYEXPR_MATCHING_QUERY = 1,
} zc_reply_keyexpr_t;
typedef struct z_buf_alloc_result_t {
  enum zc_buf_alloc_status_t status;
  z_owned_shm_mut_t buf;
  enum z_alloc_error_t error;
} z_buf_alloc_result_t;
typedef int8_t z_result_t;
typedef struct z_alloc_alignment_t {
  uint8_t pow;
} z_alloc_alignment_t;
typedef struct zc_threadsafe_context_t {
  struct zc_threadsafe_context_data_t context;
  void (*delete_fn)(void*);
} zc_threadsafe_context_t;
typedef struct z_owned_closure_hello_t {
  void *_context;
  void (*_call)(struct z_loaned_hello_t *hello, void *context);
  void (*_drop)(void *context);
} z_owned_closure_hello_t;
typedef struct z_owned_closure_query_t {
  void *_context;
  void (*_call)(struct z_loaned_query_t *reply, void *context);
  void (*_drop)(void *context);
} z_owned_closure_query_t;
typedef struct z_owned_closure_reply_t {
  void *_context;
  void (*_call)(struct z_loaned_reply_t *reply, void *context);
  void (*_drop)(void *context);
} z_owned_closure_reply_t;
typedef struct z_owned_closure_sample_t {
  void *_context;
  void (*_call)(struct z_loaned_sample_t *sample, void *context);
  void (*_drop)(void *context);
} z_owned_closure_sample_t;
typedef struct z_owned_closure_zid_t {
  void *_context;
  void (*_call)(const z_id_t *z_id, void *context);
  void (*_drop)(void *context);
} z_owned_closure_zid_t;
typedef struct z_moved_config_t {
  struct z_owned_config_t _this;
} z_moved_config_t;
typedef struct z_moved_sample_t {
  struct z_owned_sample_t _this;
} z_moved_sample_t;
typedef struct z_buf_layout_alloc_result_t {
  enum zc_buf_layout_alloc_status_t status;
  z_owned_shm_mut_t buf;
  enum z_alloc_error_t alloc_error;
  enum z_layout_error_t layout_error;
} z_buf_layout_alloc_result_t;
typedef struct z_task_attr_t {
  size_t _0;
} z_task_attr_t;
typedef struct zc_owned_closure_log_t {
  void *_context;
  void (*_call)(enum zc_log_severity_t severity, const struct z_loaned_string_t *msg, void *context);
  void (*_drop)(void *context);
} zc_owned_closure_log_t;
typedef struct zc_matching_status_t {
  bool matching;
} zc_matching_status_t;
typedef struct zc_owned_closure_matching_status_t {
  void *_context;
  void (*_call)(const struct zc_matching_status_t *matching_status, void *context);
  void (*_drop)(void *context);
} zc_owned_closure_matching_status_t;
ZENOHC_API
z_result_t z_alloc_layout_threadsafe_alloc_gc_defrag_async(struct z_buf_alloc_result_t *out_result,
                                                           const z_loaned_alloc_layout_t *layout,
                                                           struct zc_threadsafe_context_t result_context,
                                                           void (*result_callback)(void*,
                                                                                   struct z_buf_alloc_result_t*));
ZENOHC_API
z_result_t z_bytes_from_buf(struct z_owned_bytes_t *this_,
                            uint8_t *data,
                            size_t len,
                            void (*deleter)(void *data, void *context),
                            void *context);
ZENOHC_API
z_result_t z_bytes_from_str(struct z_owned_bytes_t *this_,
                            char *str,
                            void (*deleter)(void *data, void *context),
                            void *context);
ZENOHC_API
void z_closure_hello(struct z_owned_closure_hello_t *this_,
                     void (*call)(struct z_loaned_hello_t *hello, void *context),
                     void (*drop)(void *context),
                     void *context);
ZENOHC_API
void z_closure_query(struct z_owned_closure_query_t *this_,
                     void (*call)(struct z_loaned_query_t *query, void *context),
                     void (*drop)(void *context),
                     void *context);
ZENOHC_API
void z_closure_reply(struct z_owned_closure_reply_t *this_,
                     void (*call)(struct z_loaned_reply_t *reply, void *context),
                     void (*drop)(void *context),
                     void *context);
ZENOHC_API
void z_closure_sample(struct z_owned_closure_sample_t *this_,
                      void (*call)(struct z_loaned_sample_t *sample, void *context),
                      void (*drop)(void *context),
                      void *context);
ZENOHC_API
void z_closure_zid(struct z_owned_closure_zid_t *this_,
                   void (*call)(const z_id_t *z_id, void *context),
                   void (*drop)(void *context),
                   void *context);
ZENOHC_API void z_config_clone(struct z_owned_config_t *dst, const struct z_loaned_config_t *this_);
ZENOHC_API z_result_t z_config_default(struct z_owned_config_t *this_);
ZENOHC_API void z_config_drop(struct z_moved_config_t *this_);
ZENOHC_API const struct z_loaned_config_t *z_config_loan(const struct z_owned_config_t *this_);
ZENOHC_API struct z_loaned_config_t *z_config_loan_mut(struct z_owned_config_t *this_);
ZENOHC_API
uint32_t z_entity_global_id_eid(const z_entity_global_id_t *this_);
ZENOHC_API
z_id_t z_entity_global_id_zid(const z_entity_global_id_t *this_);
ZENOHC_API bool z_internal_config_check(const struct z_owned_config_t *this_);
ZENOHC_API void z_internal_config_null(struct z_owned_config_t *this_);
ZENOHC_API bool z_internal_sample_check(const struct z_owned_sample_t *this_);
ZENOHC_API void z_internal_sample_null(struct z_owned_sample_t *this_);
ZENOHC_API
bool z_internal_source_info_check(const z_owned_source_info_t *this_);
ZENOHC_API
void z_internal_source_info_null(z_owned_source_info_t *this_);
ZENOHC_API enum z_priority_t z_priority_default(void);
ZENOHC_API enum z_query_target_t z_query_target_default(void);
ZENOHC_API
enum z_reliability_t z_reliability_default(void);
ZENOHC_API void z_sample_drop(struct z_moved_sample_t *this_);
ZENOHC_API const struct z_loaned_sample_t *z_sample_loan(const struct z_owned_sample_t *this_);
ZENOHC_API
z_result_t z_shm_provider_alloc_gc_defrag_async(struct z_buf_layout_alloc_result_t *out_result,
                                                const z_loaned_shm_provider_t *provider,
                                                size_t size,
                                                struct z_alloc_alignment_t alignment,
                                                struct zc_threadsafe_context_t result_context,
                                                void (*result_callback)(void*,
                                                                        struct z_buf_layout_alloc_result_t*));
ZENOHC_API
z_result_t z_slice_from_buf(struct z_owned_slice_t *this_,
                            uint8_t *data,
                            size_t len,
                            void (*drop)(void *data, void *context),
                            void *context);
ZENOHC_API
void z_source_info_drop(z_moved_source_info_t *this_);
ZENOHC_API
z_entity_global_id_t z_source_info_id(const z_loaned_source_info_t *this_);
ZENOHC_API
const z_loaned_source_info_t *z_source_info_loan(const z_owned_source_info_t *this_);
ZENOHC_API
z_result_t z_source_info_new(z_owned_source_info_t *this_,
                             const z_entity_global_id_t *source_id,
                             uint32_t source_sn);
ZENOHC_API
uint32_t z_source_info_sn(const z_loaned_source_info_t *this_);
ZENOHC_API
z_result_t z_string_from_str(struct z_owned_string_t *this_,
                             char *str,
                             void (*drop)(void *value, void *context),
                             void *context);
ZENOHC_API
z_result_t z_task_init(struct z_owned_task_t *this_,
                       const struct z_task_attr_t *_attr,
                       void (*fun)(void *arg),
                       void *arg);
ZENOHC_API
void zc_closure_log(struct zc_owned_closure_log_t *this_,
                    void (*call)(enum zc_log_severity_t severity,
                                 const struct z_loaned_string_t *msg,
                                 void *context),
                    void (*drop)(void *context),
                    void *context);
ZENOHC_API
void zc_closure_matching_status(struct zc_owned_closure_matching_status_t *this_,
                                void (*call)(const struct zc_matching_status_t *matching_status,
                                             void *context),
                                void (*drop)(void *context),
                                void *context);
ZENOHC_API
z_result_t zc_config_get_from_str(const struct z_loaned_config_t *this_,
                                  const char *key,
                                  struct z_owned_string_t *out_value_string);
ZENOHC_API
z_result_t zc_config_get_from_substr(const struct z_loaned_config_t *this_,
                                     const char *key,
                                     size_t key_len,
                                     struct z_owned_string_t *out_value_string);
ZENOHC_API
z_result_t zc_config_insert_json5(struct z_loaned_config_t *this_,
                                  const char *key,
                                  const char *value);
ZENOHC_API
z_result_t zc_config_insert_json5_from_substr(struct z_loaned_config_t *this_,
                                              const char *key,
                                              size_t key_len,
                                              const char *value,
                                              size_t value_len);
ZENOHC_API
enum zc_locality_t zc_locality_default(void);
ZENOHC_API
enum zc_reply_keyexpr_t zc_reply_keyexpr_default(void);