examples/ZenohCS/NativeMethods.cs


        /// <summary>
        ///  Returns ``true`` if sample is valid, ``false`` if it is in gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_sample_check", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_internal_sample_check(z_owned_sample_t* this_);

        /// <summary>
        ///  Borrows sample.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_sample_t* z_sample_loan(z_owned_sample_t* this_);

        /// <summary>
        ///  Frees the memory and invalidates the sample, resetting it to a gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_sample_drop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_sample_drop(z_moved_sample_t* this_);

        /// <summary>
        ///  Constructs sample in its gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_sample_null", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_internal_sample_null(MaybeUninit* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns default value of `zc_locality_t`
        /// </summary>
        [DllImport(__DllName, EntryPoint = "zc_locality_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern zc_locality_t zc_locality_default();

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns the default value for `reliability`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reliability_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_reliability_t z_reliability_default();

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns the default value of #zc_reply_keyexpr_t.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "zc_reply_keyexpr_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern zc_reply_keyexpr_t zc_reply_keyexpr_default();

        /// <summary>
        ///  Create a default `z_query_target_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_query_target_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_query_target_t z_query_target_default();

        /// <summary>
        ///  Returns the default value of #z_priority_t.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_priority_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_priority_t z_priority_default();

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns the zenoh id of entity global id.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_entity_global_id_zid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_id_t z_entity_global_id_zid(z_entity_global_id_t* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns the entity id of the entity global id.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_entity_global_id_eid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint z_entity_global_id_eid(z_entity_global_id_t* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Creates source info.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_source_info_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_source_info_new(MaybeUninit* @this, z_entity_global_id_t* source_id, uint source_sn);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns the source_id of the source info.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_source_info_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_entity_global_id_t z_source_info_id(z_loaned_source_info_t* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns the source_sn of the source info.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_source_info_sn", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern uint z_source_info_sn(z_loaned_source_info_t* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Returns ``true`` if source info is valid, ``false`` if it is in gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_source_info_check", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_internal_source_info_check(z_owned_source_info_t* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Borrows source info.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_source_info_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_source_info_t* z_source_info_loan(z_owned_source_info_t* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Frees the memory and invalidates the source info, resetting it to a gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_source_info_drop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_source_info_drop(z_moved_source_info_t* this_);

        /// <summary>
        ///  @warning This API has been marked as unstable: it works as advertised, but it may be changed in a future release.
        ///  @brief Constructs source info in its gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_source_info_null", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_internal_source_info_null(MaybeUninit* this_);

        /// <summary>
        ///  Borrows config.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_config_loan", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_config_t* z_config_loan(z_owned_config_t* this_);

        /// <summary>
        ///  Mutably borrows config.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_config_loan_mut", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_config_t* z_config_loan_mut(z_owned_config_t* this_);

        /// <summary>
        ///  Constructs a new empty configuration.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_config_default", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte z_config_default(MaybeUninit* this_);

        /// <summary>
        ///  Constructs config in its gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_config_null", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_internal_config_null(MaybeUninit* this_);

        /// <summary>
        ///  Clones the config into provided uninitialized memory location.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_config_clone", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_config_clone(MaybeUninit* dst, z_loaned_config_t* @this);

        /// <summary>
        ///  Gets the property with the given path key from the configuration, and constructs and owned string from it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "zc_config_get_from_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte zc_config_get_from_str(z_loaned_config_t* @this, byte* key, MaybeUninit* out_value_string);

        /// <summary>
        ///  Gets the property with the given path key from the configuration, and constructs and owned string from it.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "zc_config_get_from_substr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte zc_config_get_from_substr(z_loaned_config_t* @this, byte* key, nuint key_len, MaybeUninit* out_value_string);

        /// <summary>
        ///  Inserts a JSON-serialized `value` at the `key` position of the configuration.
        ///
        ///  Returns 0 if successful, a negative error code otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "zc_config_insert_json5", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte zc_config_insert_json5(z_loaned_config_t* @this, byte* key, byte* value);

        /// <summary>
        ///  Inserts a JSON-serialized `value` at the `key` position of the configuration.
        ///
        ///  Returns 0 if successful, a negative error code otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "zc_config_insert_json5_from_substr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern sbyte zc_config_insert_json5_from_substr(z_loaned_config_t* @this, byte* key, nuint key_len, byte* value, nuint value_len);

        /// <summary>
        ///  Frees `config`, and resets it to its gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_config_drop", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_config_drop(z_moved_config_t* this_);

        /// <summary>
        ///  Returns ``true`` if config is valid, ``false`` if it is in a gravestone state.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_config_check", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_internal_config_check(z_owned_config_t* this_);
